--- a/OAS/tapi-photonic-media@2020-06-16.yaml
+++ b/OAS/tapi-photonic-media@2020-06-16.yaml
@@ -5020,7 +5020,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5043,7 +5043,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5072,7 +5072,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5101,7 +5101,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5123,7 +5123,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5146,7 +5146,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5175,7 +5175,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5204,7 +5204,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5226,7 +5226,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5249,7 +5249,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5278,7 +5278,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -5307,7 +5307,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -13200,7 +13200,7 @@ paths:
       summary: "returns tapi.oam.meg.Mep"
       description: "1. ME may have 0 MEPs (case of transit domains where at least\
         \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-        \ domaind, where the peer MEP is ouside the managed domain)\r\n          \
+        \ domains, where the peer MEP is ouside the managed domain)\r\n          \
         \      3. ME may have 2 MEPs"
       parameters:
       - name: "uuid"
@@ -26954,7 +26954,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.Mep"
@@ -27554,7 +27554,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.meg.Mep"
@@ -27787,13 +27787,13 @@ definitions:
     type: "object"
     properties:
       odu-csep-common-pac:
-        description: "none"
+        description: "Attributes common for both adaptation and termination functions."
         $ref: "#/definitions/tapi.odu.OduCsepCommonPac"
       odu-csep-ctp-pac:
-        description: "none"
+        description: "Attributes related to adaptation function."
         $ref: "#/definitions/tapi.odu.OduCsepCtpPac"
       odu-csep-ttp-pac:
-        description: "none"
+        description: "Attributes related to termination function."
         $ref: "#/definitions/tapi.odu.OduCsepTtpPac"
   tapi.odu.OduConnectivityServiceEndPointSpecWrapper:
     properties:
@@ -29583,16 +29583,16 @@ definitions:
   tapi.topology.ConnectionSpecReference:
     type: "object"
     properties:
+      connection-spec:
+        type: "string"
+        description: "The reference to a formal spec. \r\n                This reference\
+          \ need not be provided (e.g., where there is no formal machine interpretable\
+          \ spec for the type of connection)."
       connection-spec-name:
         type: "string"
         description: "The name of the connection type spec.\r\n                This\
           \ can be used as a reference to a paper document where full formal machine\
           \ interpretable specs are not supported."
-      connection-spec-id:
-        type: "string"
-        description: "The reference to a formal spec. \r\n                This reference\
-          \ need not be provided (e.g., where there is no formal machine interpretable\
-          \ spec for the type of connection)."
   tapi.topology.ConnectionSpecReferenceWrapper:
     properties:
       connection-spec-reference:
