--- a/OAS/tapi-topology@2020-04-23.yaml
+++ b/OAS/tapi-topology@2020-04-23.yaml
@@ -6194,16 +6194,16 @@ definitions:
   tapi.topology.ConnectionSpecReference:
     type: "object"
     properties:
+      connection-spec:
+        type: "string"
+        description: "The reference to a formal spec. \r\n                This reference\
+          \ need not be provided (e.g., where there is no formal machine interpretable\
+          \ spec for the type of connection)."
       connection-spec-name:
         type: "string"
         description: "The name of the connection type spec.\r\n                This\
           \ can be used as a reference to a paper document where full formal machine\
           \ interpretable specs are not supported."
-      connection-spec-id:
-        type: "string"
-        description: "The reference to a formal spec. \r\n                This reference\
-          \ need not be provided (e.g., where there is no formal machine interpretable\
-          \ spec for the type of connection)."
   tapi.topology.ConnectionSpecReferenceWrapper:
     properties:
       connection-spec-reference:
