--- a/OAS/tapi-eth@2020-04-23.yaml
+++ b/OAS/tapi-eth@2020-04-23.yaml
@@ -6842,7 +6842,7 @@ paths:
       summary: "returns tapi.oam.meg.Mep"
       description: "1. ME may have 0 MEPs (case of transit domains where at least\
         \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-        \ domaind, where the peer MEP is ouside the managed domain)\r\n          \
+        \ domains, where the peer MEP is ouside the managed domain)\r\n          \
         \      3. ME may have 2 MEPs"
       parameters:
       - name: "uuid"
@@ -25597,7 +25597,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.Mep"
@@ -26180,7 +26180,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.meg.Mep"
@@ -26785,16 +26785,16 @@ definitions:
   tapi.topology.ConnectionSpecReference:
     type: "object"
     properties:
+      connection-spec:
+        type: "string"
+        description: "The reference to a formal spec. \r\n                This reference\
+          \ need not be provided (e.g., where there is no formal machine interpretable\
+          \ spec for the type of connection)."
       connection-spec-name:
         type: "string"
         description: "The name of the connection type spec.\r\n                This\
           \ can be used as a reference to a paper document where full formal machine\
           \ interpretable specs are not supported."
-      connection-spec-id:
-        type: "string"
-        description: "The reference to a formal spec. \r\n                This reference\
-          \ need not be provided (e.g., where there is no formal machine interpretable\
-          \ spec for the type of connection)."
   tapi.topology.ConnectionSpecReferenceWrapper:
     properties:
       connection-spec-reference:
