--- a/OAS/tapi-odu@2020-04-23.yaml
+++ b/OAS/tapi-odu@2020-04-23.yaml
@@ -3617,7 +3617,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3640,7 +3640,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3669,7 +3669,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3698,7 +3698,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepCommonPac"
-      description: "none"
+      description: "Attributes common for both adaptation and termination functions."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3720,7 +3720,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3743,7 +3743,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3772,7 +3772,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3801,7 +3801,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepCtpPac"
-      description: "none"
+      description: "Attributes related to adaptation function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3823,7 +3823,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "returns tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3846,7 +3846,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3875,7 +3875,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "creates or updates tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -3904,7 +3904,7 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OduCsepTtpPac"
-      description: "none"
+      description: "Attributes related to termination function."
       parameters:
       - name: "uuid"
         in: "path"
@@ -7256,7 +7256,7 @@ paths:
       summary: "returns tapi.oam.meg.Mep"
       description: "1. ME may have 0 MEPs (case of transit domains where at least\
         \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-        \ domaind, where the peer MEP is ouside the managed domain)\r\n          \
+        \ domains, where the peer MEP is ouside the managed domain)\r\n          \
         \      3. ME may have 2 MEPs"
       parameters:
       - name: "uuid"
@@ -19705,7 +19705,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.Mep"
@@ -20305,7 +20305,7 @@ definitions:
           type: "array"
           description: "1. ME may have 0 MEPs (case of transit domains where at least\
             \ 1 MIP is present)\r\n                2. ME may have 1 MEP (case of edge\
-            \ domaind, where the peer MEP is ouside the managed domain)\r\n      \
+            \ domains, where the peer MEP is ouside the managed domain)\r\n      \
             \          3. ME may have 2 MEPs"
           items:
             $ref: "#/definitions/tapi.oam.meg.Mep"
@@ -20538,13 +20538,13 @@ definitions:
     type: "object"
     properties:
       odu-csep-common-pac:
-        description: "none"
+        description: "Attributes common for both adaptation and termination functions."
         $ref: "#/definitions/tapi.odu.OduCsepCommonPac"
       odu-csep-ctp-pac:
-        description: "none"
+        description: "Attributes related to adaptation function."
         $ref: "#/definitions/tapi.odu.OduCsepCtpPac"
       odu-csep-ttp-pac:
-        description: "none"
+        description: "Attributes related to termination function."
         $ref: "#/definitions/tapi.odu.OduCsepTtpPac"
   tapi.odu.OduConnectivityServiceEndPointSpecWrapper:
     properties:
@@ -21565,16 +21565,16 @@ definitions:
   tapi.topology.ConnectionSpecReference:
     type: "object"
     properties:
+      connection-spec:
+        type: "string"
+        description: "The reference to a formal spec. \r\n                This reference\
+          \ need not be provided (e.g., where there is no formal machine interpretable\
+          \ spec for the type of connection)."
       connection-spec-name:
         type: "string"
         description: "The name of the connection type spec.\r\n                This\
           \ can be used as a reference to a paper document where full formal machine\
           \ interpretable specs are not supported."
-      connection-spec-id:
-        type: "string"
-        description: "The reference to a formal spec. \r\n                This reference\
-          \ need not be provided (e.g., where there is no formal machine interpretable\
-          \ spec for the type of connection)."
   tapi.topology.ConnectionSpecReferenceWrapper:
     properties:
       connection-spec-reference:
