Several modifications to TapiPhotonic, some on TapiOdu
Following the agreements of
otcc2020.AM.001_TAPI_Photonic_Model_Evolution, version 10.
Yang/Tree/Yaml included.

--- a/OAS/tapi-odu@2019-03-31.yaml
+++ b/OAS/tapi-odu@2019-03-31.yaml
@@ -6589,109 +6589,6 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/end-point={local-id}/tapi-odu:otu-connectivity-service-end-point-spec/otsia-csep-ttp-pac/
-  : get:
-      tags:
-      - "tapi-odu"
-      summary: "returns tapi.odu.OtsiaCsepTtpPac"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of connectivity-service"
-        required: true
-        type: "string"
-      - name: "local-id"
-        in: "path"
-        description: "Id of end-point"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.odu.OtsiaCsepTtpPac"
-          schema:
-            $ref: "#/definitions/tapi.odu.OtsiaCsepTtpPacWrapper"
-        400:
-          description: "Internal error"
-    post:
-      tags:
-      - "tapi-odu"
-      summary: "creates tapi.odu.OtsiaCsepTtpPac"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of connectivity-service"
-        required: true
-        type: "string"
-      - name: "local-id"
-        in: "path"
-        description: "Id of end-point"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.odu.OtsiaCsepTtpPac.body-param"
-        description: "tapi.odu.OtsiaCsepTtpPac to be added to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.odu.OtsiaCsepTtpPacWrapper"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-    put:
-      tags:
-      - "tapi-odu"
-      summary: "creates or updates tapi.odu.OtsiaCsepTtpPac"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of connectivity-service"
-        required: true
-        type: "string"
-      - name: "local-id"
-        in: "path"
-        description: "Id of end-point"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.odu.OtsiaCsepTtpPac.body-param"
-        description: "tapi.odu.OtsiaCsepTtpPac to be added or updated"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.odu.OtsiaCsepTtpPacWrapper"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        204:
-          description: "Object modified"
-    delete:
-      tags:
-      - "tapi-odu"
-      summary: "removes tapi.odu.OtsiaCsepTtpPac"
-      description: "none"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of connectivity-service"
-        required: true
-        type: "string"
-      - name: "local-id"
-        in: "path"
-        description: "Id of end-point"
-        required: true
-        type: "string"
-      responses:
-        400:
-          description: "Internal error"
-        204:
-          description: "Object deleted"
   ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/end-point={local-id}/tapi-odu:otu-connectivity-service-end-point-spec/otu-csep-ttp-pac/
   : get:
       tags:
@@ -6778,6 +6675,109 @@ paths:
       tags:
       - "tapi-odu"
       summary: "removes tapi.odu.OtuCsepTtpPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of end-point"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  ? /data/tapi-common:context/tapi-connectivity:connectivity-context/connectivity-service={uuid}/end-point={local-id}/tapi-odu:otu-connectivity-service-end-point-spec/otu-otsia-csep-ttp-pac/
+  : get:
+      tags:
+      - "tapi-odu"
+      summary: "returns tapi.odu.OtuOtsiaCsepTtpPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of end-point"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.odu.OtuOtsiaCsepTtpPac"
+          schema:
+            $ref: "#/definitions/tapi.odu.OtuOtsiaCsepTtpPacWrapper"
+        400:
+          description: "Internal error"
+    post:
+      tags:
+      - "tapi-odu"
+      summary: "creates tapi.odu.OtuOtsiaCsepTtpPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of end-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.odu.OtuOtsiaCsepTtpPac.body-param"
+        description: "tapi.odu.OtuOtsiaCsepTtpPac to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.odu.OtuOtsiaCsepTtpPacWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-odu"
+      summary: "creates or updates tapi.odu.OtuOtsiaCsepTtpPac"
+      description: "none"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of connectivity-service"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of end-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.odu.OtuOtsiaCsepTtpPac.body-param"
+        description: "tapi.odu.OtuOtsiaCsepTtpPac to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.odu.OtuOtsiaCsepTtpPacWrapper"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-odu"
+      summary: "removes tapi.odu.OtuOtsiaCsepTtpPac"
       description: "none"
       parameters:
       - name: "uuid"
@@ -25065,26 +25065,6 @@ definitions:
     properties:
       odu-term-and-adapter:
         $ref: "#/definitions/tapi.odu.OduTerminationAndClientAdaptationPac"
-  tapi.odu.OtsiaCsepTtpPac:
-    type: "object"
-    properties:
-      total-power-warn-threshold-lower:
-        type: "string"
-        description: "Allows to configure the lower power threshold on whole Assembly\
-          \ scope."
-      total-power-warn-threshold-upper:
-        type: "string"
-        description: "Allows to configure the upper power threshold on whole Assembly\
-          \ scope."
-      number-of-otsi:
-        type: "integer"
-        format: "int32"
-        description: "none"
-        default: 1
-  tapi.odu.OtsiaCsepTtpPacWrapper:
-    properties:
-      otsia-csep-ttp-pac:
-        $ref: "#/definitions/tapi.odu.OtsiaCsepTtpPac"
   tapi.odu.OtuConnectionEndPointSpec:
     type: "object"
     properties:
@@ -25107,9 +25087,9 @@ definitions:
       odu-cn-csep-ttp-pac:
         description: "none"
         $ref: "#/definitions/tapi.odu.OduCnCsepTtpPac"
-      otsia-csep-ttp-pac:
+      otu-otsia-csep-ttp-pac:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OtsiaCsepTtpPac"
+        $ref: "#/definitions/tapi.odu.OtuOtsiaCsepTtpPac"
   tapi.odu.OtuConnectivityServiceEndPointSpecWrapper:
     properties:
       tapi-odu:otu-connectivity-service-end-point-spec:
@@ -25154,6 +25134,26 @@ definitions:
     properties:
       otu-mep:
         $ref: "#/definitions/tapi.odu.OtuMep"
+  tapi.odu.OtuOtsiaCsepTtpPac:
+    type: "object"
+    properties:
+      total-power-warn-threshold-lower:
+        type: "string"
+        description: "Allows to configure the lower power threshold on whole Assembly\
+          \ scope."
+      total-power-warn-threshold-upper:
+        type: "string"
+        description: "Allows to configure the upper power threshold on whole Assembly\
+          \ scope."
+      number-of-otsi:
+        type: "integer"
+        format: "int32"
+        description: "none"
+        default: 1
+  tapi.odu.OtuOtsiaCsepTtpPacWrapper:
+    properties:
+      otu-otsia-csep-ttp-pac:
+        $ref: "#/definitions/tapi.odu.OtuOtsiaCsepTtpPac"
   tapi.odu.OtuTtpPac:
     type: "object"
     properties:
