--- a/OAS/tapi-common@2019-03-31.yaml
+++ b/OAS/tapi-common@2019-03-31.yaml
@@ -181,7 +181,7 @@ paths:
       tags:
       - "tapi-common"
       summary: "creates tapi.common.ServiceInterfacePoint"
-      description: "none"
+      description: "The ServiceInterfacePoint (SIP) instances belonging to this context."
       parameters:
       - in: "body"
         name: "tapi.common.ServiceInterfacePoint.body-param"
@@ -201,7 +201,7 @@ paths:
       tags:
       - "tapi-common"
       summary: "returns tapi.common.ServiceInterfacePoint"
-      description: "none"
+      description: "The ServiceInterfacePoint (SIP) instances belonging to this context."
       parameters:
       - name: "uuid"
         in: "path"
@@ -219,7 +219,7 @@ paths:
       tags:
       - "tapi-common"
       summary: "creates or updates tapi.common.ServiceInterfacePoint"
-      description: "none"
+      description: "The ServiceInterfacePoint (SIP) instances belonging to this context."
       parameters:
       - name: "uuid"
         in: "path"
@@ -243,7 +243,7 @@ paths:
       tags:
       - "tapi-common"
       summary: "removes tapi.common.ServiceInterfacePoint"
-      description: "none"
+      description: "The ServiceInterfacePoint (SIP) instances belonging to this context."
       parameters:
       - name: "uuid"
         in: "path"
@@ -280,7 +280,7 @@ paths:
       - "tapi-common"
       summary: "returns tapi.common.CapacityValue"
       description: "Total capacity of the entity. In case of bandwidthProfile, this\
-        \ is expected to same as the committedInformationRate."
+        \ is expected to be the same as the committedInformationRate."
       parameters:
       - name: "uuid"
         in: "path"
@@ -427,7 +427,7 @@ paths:
       - "tapi-common"
       summary: "returns tapi.common.CapacityValue"
       description: "Total capacity of the entity. In case of bandwidthProfile, this\
-        \ is expected to same as the committedInformationRate."
+        \ is expected to be the same as the committedInformationRate."
       parameters:
       - name: "uuid"
         in: "path"
@@ -526,7 +526,7 @@ definitions:
     properties:
       total-size:
         description: "Total capacity of the entity. In case of bandwidthProfile, this\
-          \ is expected to same as the committedInformationRate."
+          \ is expected to be the same as the committedInformationRate."
         $ref: "#/definitions/tapi.common.CapacityValue"
   tapi.common.CapacityPac:
     type: "object"
@@ -557,9 +557,9 @@ definitions:
       value:
         type: "integer"
         format: "int32"
-        description: "none"
+        description: "The specific value of the capacity."
       unit:
-        description: "none"
+        description: "The specific unit of measurement of the capacity."
         $ref: "#/definitions/tapi.common.CapacityUnit"
   tapi.common.CapacityValueWrapper:
     properties:
@@ -619,10 +619,11 @@ definitions:
     properties:
       value-name:
         type: "string"
-        description: "The name of the value. The value need not have a name."
+        description: "The name of the value. Optional, the value need not to have\
+          \ a name."
       value:
         type: "string"
-        description: "The value"
+        description: "The specific value."
   tapi.common.NameAndValueWrapper:
     properties:
       name:
@@ -652,12 +653,15 @@ definitions:
           items:
             type: "string"
         layer-protocol-name:
-          description: "Usage of layerProtocolName [>1]  in the ServiceInterfacePoint\
-            \ should be considered experimental"
+          description: "The layer protocol of the ServiceInterfacePoint (SIP).\r\n\
+            \                Usage of layerProtocolName [>1]  in the ServiceInterfacePoint\
+            \ should be considered experimental."
           $ref: "#/definitions/tapi.common.LayerProtocolName"
         direction:
-          description: "If direction attribute is missing the SIP instance is to be\
-            \ intended as 'BIDIRECTIONAL'"
+          description: "The orientation of flow at the (conceptual) port of the potentially\
+            \ supported ConnectivityService(s).\r\n                If direction attribute\
+            \ is missing the ServiceInterfacePoint (SIP) instance is to be intended\
+            \ as 'BIDIRECTIONAL'"
           $ref: "#/definitions/tapi.common.PortDirection"
       description: "A Service Interface Point represents the network-interface-facing\
         \ aspects of the edge-port functions that access the forwarding capabilities\
@@ -676,13 +680,16 @@ definitions:
       properties:
         service-interface-point:
           type: "array"
-          description: "none"
+          description: "The ServiceInterfacePoint (SIP) instances belonging to this\
+            \ context."
           items:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
       description: "This object class represents the scope of control that a particular\
-        \ SDN controller has with re-spect to a particular network, (i.e., encompassing\
+        \ SDN controller has with respect to a particular network, (i.e., encompassing\
         \ a designated set of interconnected (virtual) network elements).\r\n    \
-        \        This class includes the list of Service Interface Points."
+        \        This class includes the list of Service Interface Points.\r\n   \
+        \         This class can be augmented by specific contexts, e.g. topology\
+        \ context."
   tapi.common.TapiContextWrapper:
     properties:
       tapi-common:context:
@@ -692,26 +699,27 @@ definitions:
     properties:
       uuid:
         type: "string"
-        description: "UUID: An identifier that is universally unique within an identifier\
-          \ space, where the identifier space is itself globally unique, and immutable.\r\
-          \n                    An UUID carries no semantics with respect to the purpose\
-          \ or state of the entity.\r\n                    UUID here uses string representation\
-          \ as defined in RFC 4122.  The canonical representation uses lowercase characters.\r\
-          \n                    Pattern: [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-'\
-          \ + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12} \r\n                    Example of a\
-          \ UUID in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
+        description: "UUID of the ServiceInterfacePoint (SIP) instance.\r\n      \
+          \              UUID: An identifier that is universally unique within an\
+          \ identifier space, where the identifier space is itself globally unique,\
+          \ and immutable.\r\n                    An UUID carries no semantics with\
+          \ respect to the purpose or state of the entity.\r\n                   \
+          \ UUID here uses string representation as defined in RFC 4122.  The canonical\
+          \ representation uses lowercase characters.\r\n                    Pattern:\
+          \ [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-' + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12}\
+          \ \r\n                    Example of a UUID in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
   tapi.common.getserviceinterfacepointdetails.Output:
     type: "object"
     properties:
       sip:
-        description: "none"
+        description: "The requested SIP instance."
         $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
   tapi.common.getserviceinterfacepointlist.Output:
     type: "object"
     properties:
       sip:
         type: "array"
-        description: "none"
+        description: "The requested list of SIP instances."
         items:
           $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
   tapi.common.updateserviceinterfacepoint.Input:
@@ -719,14 +727,15 @@ definitions:
     properties:
       uuid:
         type: "string"
-        description: "UUID: An identifier that is universally unique within an identifier\
-          \ space, where the identifier space is itself globally unique, and immutable.\r\
-          \n                    An UUID carries no semantics with respect to the purpose\
-          \ or state of the entity.\r\n                    UUID here uses string representation\
-          \ as defined in RFC 4122.  The canonical representation uses lowercase characters.\r\
-          \n                    Pattern: [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-'\
-          \ + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12} \r\n                    Example of a\
-          \ UUID in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
+        description: "UUID of the ServiceInterfacePoint (SIP) instance.\r\n      \
+          \              UUID: An identifier that is universally unique within an\
+          \ identifier space, where the identifier space is itself globally unique,\
+          \ and immutable.\r\n                    An UUID carries no semantics with\
+          \ respect to the purpose or state of the entity.\r\n                   \
+          \ UUID here uses string representation as defined in RFC 4122.  The canonical\
+          \ representation uses lowercase characters.\r\n                    Pattern:\
+          \ [0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-' + '[0-9a-fA-F]{4}-[0-9a-fA-F]{12}\
+          \ \r\n                    Example of a UUID in string representation: f81d4fae-7dec-11d0-a765-00a0c91e6bf6"
       state:
-        description: "none"
+        description: "The requested update of Administrative State."
         $ref: "#/definitions/tapi.common.AdministrativeState"
