--- a/OAS/tapi-alarm@2019-03-31.yaml
+++ b/OAS/tapi-alarm@2019-03-31.yaml
@@ -65,22 +65,6 @@ info:
     \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
     \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
     \n        YANG models included in this release may not be backward compatible\
-    \ with previous TAPI releases.,\r\n        This module contains TAPI DSR Model\
-    \ definitions.\r\n        Source: TapiDsr.uml\r\n        Copyright (c) 2018 Open\
-    \ Networking Foundation (ONF). All rights reserved.\r\n        License: This module\
-    \ is distributed under the Apache License 2.0\r\n        - The TAPI YANG models\
-    \ included in this TAPI release are a *normative* part of the TAPI SDK.\r\n  \
-    \      - The YANG specifications have been generated from the corresponding UML\
-    \ model using the [ONF EAGLE UML2YANG mapping tool]\r\n        <https://github.com/OpenNetworkingFoundation/EagleUmlYang>\r\
-    \n        and further edited manually to comply with the [ONF IISOMI UML2YANG\
-    \ mapping guidelines]\r\n        <https://wiki.opennetworking.org/display/OIMT/UML+-+YANG+Guidelines>\r\
-    \n        - Status of YANG model artifacts can be determined by referring to the\
-    \ corresponding UML artifacts.\r\n        As described in the UML models, some\
-    \ artifacts are considered *experimental*, and thus the corresponding YANG artifacts.\r\
-    \n        - The ONF TAPI release process does not guarantee backward compatibility\
-    \ of YANG models across major versions of TAPI releases.\r\n        The YANG model\
-    \ backward compatibility criteria are outlined in section 11 of <https://tools.ietf.org/html/rfc7950>.\r\
-    \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases.,\r\n        This module contains TAPI Connectivity\
     \ Model definitions.\r\n        Source: TapiConnectivity.uml\r\n        Copyright\
     \ (c) 2018 Open Networking Foundation (ONF). All rights reserved.\r\n        License:\
@@ -131,7 +115,7 @@ info:
     \n        YANG models included in this release may not be backward compatible\
     \ with previous TAPI releases."
   version: "2.1.3"
-  title: "tapi-topology,tapi-notification,tapi-common,tapi-path-computation,tapi-dsr,tapi-connectivity,tapi-alarm,tapi-oam\
+  title: "tapi-topology,tapi-notification,tapi-common,tapi-path-computation,tapi-connectivity,tapi-alarm,tapi-oam\
     \ API"
 host: "localhost:1234"
 consumes:
@@ -17062,7 +17046,7 @@ definitions:
     properties:
       networking-alarm-info:
         $ref: "#/definitions/tapi.alarm.NetworkingAlarmInfo"
-  tapi.alarm.NotificationAugmentation3:
+  tapi.alarm.NotificationAugmentation1:
     type: "object"
     properties:
       alarm-info:
@@ -17071,7 +17055,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-alarm"
       namespace: "urn:onf:otcc:yang:tapi-alarm"
-  tapi.alarm.NotificationAugmentation4:
+  tapi.alarm.NotificationAugmentation2:
     type: "object"
     properties:
       tca-info:
@@ -18940,11 +18924,11 @@ definitions:
           type: "string"
   tapi.notification.notificationcontext.Notification:
     allOf:
-    - $ref: "#/definitions/tapi.alarm.NotificationAugmentation3"
-    - $ref: "#/definitions/tapi.alarm.NotificationAugmentation4"
+    - $ref: "#/definitions/tapi.alarm.NotificationAugmentation1"
+    - $ref: "#/definitions/tapi.alarm.NotificationAugmentation2"
     - $ref: "#/definitions/tapi.notification.Notification"
-    - $ref: "#/definitions/tapi.oam.NotificationAugmentation1"
-    - $ref: "#/definitions/tapi.oam.NotificationAugmentation2"
+    - $ref: "#/definitions/tapi.oam.NotificationAugmentation3"
+    - $ref: "#/definitions/tapi.oam.NotificationAugmentation4"
   tapi.notification.notificationcontext.NotificationWrapper:
     properties:
       notification:
@@ -19351,18 +19335,36 @@ definitions:
   tapi.oam.NotificationAugmentation1:
     type: "object"
     properties:
-      tca-info:
+      alarm-info:
         description: "none"
-        $ref: "#/definitions/tapi.oam.TcaInfo"
+        $ref: "#/definitions/tapi.oam.AlarmInfo"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.NotificationAugmentation2:
     type: "object"
     properties:
+      tca-info:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.TcaInfo"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.NotificationAugmentation3:
+    type: "object"
+    properties:
       alarm-info:
         description: "none"
         $ref: "#/definitions/tapi.oam.AlarmInfo"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.NotificationAugmentation4:
+    type: "object"
+    properties:
+      tca-info:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.TcaInfo"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
